--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html { 
-  background: url(https://www.coindesk.com/resizer/ADSVwbZ9tR7qqg3t29LkjVwB_Bg=/1200x628/center/middle/cloudfront-us-east-1.images.arcpublishing.com/coindesk/GNYP26OXSRH3TCU6ISRYQPUW34.gif) no-repeat center center fixed; 
+  background: url(https://tenor.com/view/anonymous-pepe-rare-pepe-the-matrix-pepe-matrix-gif-15409694) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
